--- a/config/config.env
+++ b/config/config.env
@@ -1,8 +1,8 @@
 NODE_ENV=development
 PORT=3000
-# MONGO_URI=mongodb+srv://api:mohiuddin@cluster0.fbd4k.mongodb.net/api?retryWrites=true&w=majority
-MONGO_URI=mongodb+srv://flink:Zzi9Ns2wAArEnyi7@cluster0.fbd4k.mongodb.net/flink?retryWrites=true&w=majority
 
+MONGO_URI=mongodb+srv://flink:Zzi9Ns2wAArEnyi7@cluster0.fbd4k.mongodb.net/flink?retryWrites=true&w=majority
+# MONGO_URI="mongodb://localhost:27017/mydb"
 
 JWT_COOKIE_EXPIRE = 30
 
